# CVengers

./: CMakeLists.txt  README.md  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cvengers_challenge/lib/cvengers_challenge/: armor_node  train_digit_model  train_digit_model_cpp  vision_node
install/cvengers_challenge/share/ament_index/resource_index/package_run_dependencies/: cvengers_challenge
install/cvengers_challenge/share/ament_index/resource_index/parent_prefix_path/: cvengers_challenge
install/cvengers_challenge/share/cvengers_challenge/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cvengers_challenge/share/cvengers_challenge/cmake/: cvengers_challengeConfig.cmake
log/: latest_build
results/armor/: CVengers_results0.json  CVengers_results0.json.sha256
results/rect/: CVengers_results0.json  CVengers_results0.json.sha256
results/ring/: CVengers_results1.json  CVengers_results1.json.sha256
results/sphere/: CVengers_results0.json  CVengers_results0.json.sha256
src/: train_digit_model_libtorch.cpp  vision_node.cpp
src/include/: armor_detector.h  image_processor.h  libtorch_digit_recognizer.h
src/src/: armor_detector.cpp  image_processor.cpp  libtorch_digit_recognizer.cpp
