<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cvengers_challenge</name>
  <version>0.0.0</version>
  <description>CVengers challenge package</description>
  <maintainer email="2126633055@qq.com">lzs</maintainer>
  <license>Apache License 2.0</license>

  <!--基础ROS2依赖-->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <!--图形处理依赖-->
  <depend>gazebo_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>opencv</depend>

  <!--自定义消息类型和服务依赖-->
  <depend>referee_pkg</depend>

  <!--测试依赖-->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
